# Quelos

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  LICENSE  README.md  premake5.lua
QsCorePlugins/QsDiligentEnginePlugin/: CMakeLists.txt
QsCorePlugins/QsDiligentEnginePlugin/Runtime/: Plugin.cpp
QsCorePlugins/QsDiligentEnginePlugin/Runtime/ImGui/: DiligentImGuiState.cpp  ImGuiDiligentRenderer.cpp  ImGuiDiligentRenderer.hpp  ImGuiImplDiligent.cpp  ImGuiImplDiligent.hpp  MapHelper.hpp
QsCorePlugins/QsDiligentEnginePlugin/Runtime/Renderer/: DiligentRendererContext.cpp  DiligentRendererContext.h
Quelos/: CMakeLists.txt  Quelos.vcxproj.filters  premake5.lua
Quelos-Editor/: CMakeLists.txt  imgui.ini  premake5.lua
Quelos-Editor/SandboxProject/: SandboxProject.quel
Quelos-Editor/SandboxProject/Assets/Materials/: DefaultMat.qmat  NewMaterial.qmat  Toon.qmat  Unlit.qmat
Quelos-Editor/SandboxProject/Assets/Meshes/: Cube.fbx  Cube.fbx.quel  Plane.fbx  Plane.fbx.quel
Quelos-Editor/SandboxProject/Assets/NewScene/: NewScene.qscene
Quelos-Editor/SandboxProject/Assets/Sandbox/: Baked.qscene
Quelos-Editor/SandboxProject/Assets/TestScene/: TestScene.qscene
Quelos-Editor/SandboxProject/Assets/shaders/: DepthReduction.slang  DepthReduction.slang.qmeta  EntitySelection.slang  EntitySelection.slang.qmeta  QuelosEditor.slang  SelectedOutlineComposite.slang  SelectedOutlineComposite.slang.qmeta  SelectedOutlineMask.slang  SelectedOutlineMask.slang.qmeta  ShadowDepth.slang  ShadowDepth.slang.qmeta  ShadowMask.slang  ShadowMask.slang.qmeta  bgfx.slang  fallback.slang  fallback.slang.qmeta  hello-world.slang  mesh.slang  mesh.slang.qmeta  quelos.slang  toon.slang  toon.slang.qmeta
Quelos-Editor/SandboxProject/ProjectSettings/: AssetRegistry.quel
Quelos-Editor/src/: EditorLayer.cpp  EditorLayer.h  EditorUI.h  ProjectSerializer.cpp  ProjectSerializer.h  QuelosEditorApp.cpp  UndoSystem.cpp  UndoSystem.h
Quelos-Editor/src/AssetManagement/: EditorAssetImporter.cpp  EditorAssetImporter.h  EditorAssetManager.cpp  EditorAssetManager.h
Quelos-Editor/src/AssetManagement/AssetImporters/: MaterialAssetRegistryExtension.cpp  MaterialAssetRegistryExtension.h  MaterialImporter.cpp  MaterialImporter.h  MeshImporter.cpp  MeshImporter.h  ModelAssetRegistryExtension.cpp  ModelAssetRegistryExtension.h  ModelImporter.cpp  ModelImporter.h  ModelMetadataHandler.cpp  ModelMetadataHandler.h  SceneImporter.cpp  SceneImporter.h  ShaderImporter.cpp  ShaderImporter.h
Quelos-Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  EntityHierarchyPanel.cpp  EntityHierarchyPanel.h  EntityInspectorPanel.cpp  EntityInspectorPanel.h  InspectorArchive.cpp  InspectorArchive.h  ViewportPanel.cpp  ViewportPanel.h
Quelos-Editor/src/Scene/: EntitySnapshot.cpp  EntitySnapshot.h  SceneSerializer.cpp  SceneSerializer.h  SetFieldCommand.h
Quelos-Editor/src/Scene/Commands/: ComponentCommand.h  CreateActorCommand.h  ReorderChildrenCommand.h  SetEntityNameCommnad.h  SetFieldCommand.h  SetParentCommand.h
Quelos-Editor/src/Workspaces/: SceneWorkspace.cpp  SceneWorkspace.h  Workspace.cpp  Workspace.h
Quelos-Editor/src/Workspaces/MaterialWorkspace/: MaterialCommands.h  MaterialPropertiesPanel.cpp  MaterialPropertiesPanel.h  MaterialWorkspace.cpp  MaterialWorkspace.h
Quelos-Editor/src/Workspaces/SceneWorkspace/: GameViewport.cpp  GameViewport.h  SceneViewport.cpp  SceneViewport.h
Quelos/cmake/: QuelosConfig.cmake
Quelos/src/: EntryPoint.h  qspch.cpp  qspch.h
Quelos/src/Quelos/AssetManager/: Asset.cpp  Asset.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetManagerBase.cpp  AssetManagerBase.h  AssetMetadata.h  AssetMetadataPersistence.cpp  AssetMetadataPersistence.h  AssetPool.h  AssetRef.h  AssetRegistry.cpp  AssetRegistry.h  AssetRegistryExtensions.cpp  AssetRegistryExtensions.h  EditorAssetManager.cpp  EditorAssetManager.h  RuntimeAssetManager.cpp  RuntimeAssetManager.h  SoftRef.h  TextureImporter.cpp  TextureImporter.h
Quelos/src/Quelos/Assets/: Mesh.cpp  Mesh.h
Quelos/src/Quelos/Core/: API.h  AllocatorType.cpp  AllocatorType.hpp  Allocators.cpp  Allocators.hpp  Application.cpp  Application.h  Assert.h  Base.h  Buffer.h  DataTypes.hpp  Event.cpp  Event.h  Formatters.h  GUID.cpp  GUID.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Profiling.cpp  Profiling.h  Ref.cpp  Ref.h  Timer.h  Window.cpp  Window.h
Quelos/src/Quelos/ImGUI/: ImGuiLayer.cpp  imgui_impl_bgfx.cpp  imgui_impl_glfw.cpp
Quelos/src/Quelos/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h  ImGuiState.cpp  ImGuiState.h  ImGuiUI.h  ScopedStyle.h
Quelos/src/Quelos/Math/: Math.cpp  Math.h  Math.ixx  Portable.h
Quelos/src/Quelos/Platform/: Allocators.hpp
Quelos/src/Quelos/Plugin/: PluginAPI.h
Quelos/src/Quelos/Project/: Project.cpp  Project.h
Quelos/src/Quelos/Renderer/: BlendState.h  Buffer.h  Camera.h  Color.h  ComputeShader.cpp  ComputeShader.h  DepthStencilState.h  EditorCamera.cpp  EditorCamera.h  Extent2D.h  Fence.hpp  FrameBuffer.cpp  FrameBuffer.h  GpuBuffer.h  GraphicsPipelineSpec.h  GraphicsShader.cpp  GraphicsShader.h  GraphicsTypes.h  IndexBuffer.cpp  IndexBuffer.h  LayoutElement.h  Material.cpp  Material.h  MeshData.h  PipelineResourceSignature.h  PipelineState.h  RasterizerState.h  RenderPass.h  RenderPassAttrib.h  RenderResource.h  Renderer.cpp  Renderer.h  RendererAPI.h  RendererContext.cpp  RendererContext.h  SceneCamera.cpp  SceneCamera.h  Shader.cpp  Shader.h  ShaderResourceBinding.h  (+6 more)
Quelos/src/Quelos/Scenes/: Actor.h  ComponentReference.h  ComponentRegistery.cpp  ComponentRegistery.h  Components.cpp  Components.h  Entity.cpp  Entity.h  EntitySnapshot.cpp  EntitySnapshot.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  SceneSnapshot.cpp  SceneSnapshot.h  WorldRenderer.cpp  WorldRenderer.h
Quelos/src/Quelos/Serialization/: BinaryWriter.h  Lexer.h  (+10 more)
Quelos/src/QuelosEditor/: EditorAPI.h
QuelosCorePlugins/QuelosBgfxRendererPlugin/: CMakeLists.txt
QuelosCorePlugins/QuelosBgfxRendererPlugin/Editor/: Plugin.cpp
QuelosCorePlugins/QuelosBgfxRendererPlugin/Runtime/: Plugin.cpp
(+101 files in other folders)
